fix x-overflow

--- a/content/assets/styles/style.scss
+++ b/content/assets/styles/style.scss
@@ -55,7 +55,6 @@ div#content {
     margin-right: auto;
 
     min-height: 1px;
-    padding: 10px 20px 20px;
     position: relative;
     text-align: right;
     font-size: 75%;
